k8s/traefik-service-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-loadbalancer
  namespace: kube-system
  labels:
    app: traefik
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-target-type: "instance"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31551
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
    nodePort: 31552
  selector:
    app.kubernetes.io/name: traefik
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
